--- a/Thesis/pixelgeb.tex
+++ b/Thesis/pixelgeb.tex
@@ -412,7 +412,7 @@ die we met die similariteitsmaat bekomen.
 In figuur~\ref{fig:multires_gggrs_en_cputimes} worden de GGGRs en de rekentijden van
 de similariteitsmaten op basis van beeldonderdelen van $8 \cdot 8$ pixels getoond.
 De component-gebaseerde aanpak samen met
-$M_{I3c}$ geeft daarbij de beste GGGR-waarde. Zoals blijkt uit
+$M_{I_{3c}}$ geeft daarbij de beste GGGR-waarde. Zoals blijkt uit
 figuur~\ref{fig:results_beste_multires_pixelgeb}, zijn de resultaten van die
 maat niet zo overtuigend.
 
@@ -1068,7 +1068,7 @@ beeldonderdelen.}
 \vspace{5pt}
 \caption{\label{fig:results_beste_multires_pixelgeb}De GGR-waarde en de eerste tien resultaten 
 voor elk voorbeeld bij de similariteitsmaat die we bekomen door 
-beeldonderdelen componentsgewijs te vergelijken met behulp van $M_{I3c}$ en het gemiddelde.}
+beeldonderdelen componentsgewijs te vergelijken met behulp van $M_{I_{3c}}$ en het gemiddelde.}
 \end{figure}
 
 \begin{figure}[p]
@@ -1540,7 +1540,7 @@ componentsgewijs te vergelijken met $M_9$. Figuur~\ref{fig:results_beste_moments
 toont de resultaten van die similariteitsmaat. Die resultaten kunnen nog verbeterd worden 
 door te aggregeren met behulp van het minimum in plaats van het gemiddelde. Hoewel de 
 resulterende rangschikkingen bijna identiek zijn, bekomen we in dat geval voor $M_3$, $M_6$, 
-$M_7$ en $M_{I3}$ een GGGR-waarde die nog een fractie lager is dan diegene die correspondeert
+$M_7$ en $M_{I_3}$ een GGGR-waarde die nog een fractie lager is dan diegene die correspondeert
 met $M_9$. In figuur~\ref{fig:results_beste_moments_comps_pixelgeb} worden de resultaten
 van $M_7$ weergegeven.
 
@@ -1557,7 +1557,7 @@ gemiddelde GGGR & 0.0818 & 0.0951 & 0.1115 & 0.1428 & 0.0802 & 0.0922 & 0.0971 &
 \hline
 minimale GGGR & 0.0212 & 0.0089 & 0.0203 & 0.2024 & 0.1985 & 0.0084 & 0.0201 & 0.2212 \\
 gemiddelde GGGR & 0.1145 & 0.0873 & 0.0922 & 0.3604 & 0.3688 & 0.0806 & 0.0868 & 0.3895\vspace{8pt}\\
-& $M_{10c}$ & $M_{11}$ & $M_{11c}$ & $M_{12}$ & $M_{13}$ & $M_{I3}$ & $M_{I3c}$ \\
+& $M_{10c}$ & $M_{11}$ & $M_{11c}$ & $M_{12}$ & $M_{13}$ & $M_{I_3}$ & $M_{I_{3c}}$ \\
 \hline
 minimale GGGR & 0.2106 & 0.0128 & 0.0219 & 0.0203 & 0.1985 & 0.0102 & 0.0212 \\
 gemiddelde GGGR & 0.3850 & 0.0922 & 0.0971 & 0.0922 & 0.3696 & 0.1035 & 0.1038
