--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -69,18 +69,12 @@
 
 \input{kleurgeb}
 
+\input{implementatie}
 
-\chapter{Aggregatie}
-
-\section{Gecombineerde similariteitsmaten}
-\section{Meerdere voorbeelden}
-
-
-\chapter{Implementatie}
-
-\section{Imilarity}
-\section{Imperforate}
-\section{Giggle}
+% \chapter{Aggregatie}
+% 
+% \section{Gecombineerde similariteitsmaten}
+% \section{Meerdere voorbeelden}
 
 
 \nocite{*}
